<resources>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="SS_SEARCH_HISTORY_HEADER_ABB">Search history</string>
    <string name="about">About %s</string>
    <string name="about_already_installed">The latest version is already installed.</string>
    <string name="about_app_info">App info</string>
    <string name="about_home_screen">Home screen</string>
    <string name="about_licence">Open source licenses</string>
    <string name="about_network_err_phone">"Can't check for updates. Your phone isn't connected to a network."</string>
    <string name="about_network_err_tablet">"Can't check for updates. Your tablet's network connection isn't stable."</string>
    <string name="about_new_version_exist">A new version is available.</string>
    <string name="about_retry">RETRY</string>
    <string name="about_update">UPDATE</string>
    <string name="about_version">Version %s</string>
    <string name="accessibility_add_home_screen">Add page</string>
    <string name="accessibility_button">Button</string>
    <string name="accessibility_dimmed">Dimmed</string>
    <string name="activity_not_found">App not found</string>
    <string name="add">Add</string>
    <string name="add_apps_to_home_screen_summary">Newly downloaded apps from Play Store will be added to the Home screen automatically.</string>
    <string name="add_apps_to_home_screen_title">Add apps to Home screen</string>
    <string name="add_shortcut_request_different_screen">Touch and hold an icon or tap ADD to add it to a different page.</string>
    <string name="add_shortcut_request_home_screen">Touch and hold an icon or tap ADD to add it to the Home screen.</string>
    <string name="add_to_home_screen_title">Add to Home screen?</string>
    <string name="add_to_last_page">"You selected %1$d items, but there's not enough space on this page. The remaining %2$d items will be added to last page."</string>
    <string name="add_to_last_page_for_hotseat">"You selected %1$d items, but there's not enough space on the favorites tray. The remaining %2$d items will be added to the last page."</string>
    <string name="add_widget_request_different_screen">Touch and hold the widget or tap ADD to add it to a different page.</string>
    <string name="add_widget_request_home_screen">Touch and hold the widget or tap ADD to add it to the Home screen.</string>
    <string name="align_to_bottom">Align to bottom</string>
    <string name="align_to_top">Align to top</string>
    <string name="app_icon_badges_summary">Select how to show icon badges when apps send new notifications.</string>
    <string name="app_icon_badges_title">App icon badges</string>
    <string name="app_locked_toast">%s locked.</string>
    <string name="app_search">Search phone</string>
    <string name="app_search_no_apps">You can add shortcuts on the home screen from the search results.</string>
    <string name="app_search_no_results_found">No results found</string>
    <string name="app_search_tablet">Search tablet</string>
    <string name="app_unlocked_toast">%s unlocked.</string>
    <string name="application_name">Samsung Experience Home</string>
    <string name="application_name_galaxy">Galaxy home</string>
    <string name="apply">Apply</string>
    <string name="apppair_installed">App pair added on Home screen.</string>
    <string name="appsPicker_add_button">ADD</string>
    <string name="appsPicker_apps">Apps</string>
    <string name="appsPicker_search_result_found">%d found</string>
    <string name="apps_button_hide">Hide Apps button</string>
    <string name="apps_button_label">Apps</string>
    <string name="apps_button_setting_guide_text">When the Apps button is turned on, the item on the right will be moved from its current position to the Home screen.</string>
    <string name="apps_button_show">Show Apps button</string>
    <string name="apps_button_summary">Show a button on the Home screen that opens the Apps screen.</string>
    <string name="apps_button_title">Apps button</string>
    <string name="apps_screen">Apps screen</string>
    <string name="autoalign_popup_message">"Once you align them, you can't go back to your previous arrangement."</string>
    <string name="autoalign_popup_title">Align items on page?</string>
    <string name="available_galaxyapps">Available in Galaxy Apps</string>
    <string name="badge_help_tip_body">"Whenever there's an app notification, a badge appears on the corresponding app icon. When you dismiss the notification, the badge disappears."</string>
    <string name="badge_help_tip_button">Details</string>
    <string name="badge_manage_explain">Turn off the toggle switch next to an app to hide badge from it.</string>
    <string name="badge_manage_summary">Restrict apps to display a badge</string>
    <string name="badge_manage_title">Manage badge of apps</string>
    <string name="badge_select_all_app">All</string>
    <string name="button">Button</string>
    <string name="cancel">Cancel</string>
    <string name="default_page">Default page</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="disable_message">%1$s and all functions related to it will be disabled. To enable the app again, go to Settings > Apps, then select %2$s.</string>
    <string name="disable_message_knox_mode">%1$s and all the functions related to it will be disabled. To enable the app again, go to %2$s settings > Apps.</string>
    <string name="disable_message_vzw">%s and all the features related to it will be disabled. To enable it again, go to Settings > Applications > Application manager.</string>
    <string name="discard">Discard</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="download_text">Download %s?</string>
    <string name="drag_here_to_move_from_folder">Drag here to move from folder.</string>
    <string name="duplcation_widget_instance_allowed_differ_type">Widget that contains weather information already added to home screen. Remove %s and try again.</string>
    <string name="folder_add_app">Add application</string>
    <string name="folder_add_button">ADD APPS</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_color">Folder color</string>
    <string name="folder_color_close">Close</string>
    <string name="folder_color_default">Default folder color</string>
    <string name="folder_color_light_blue">light blue</string>
    <string name="folder_color_light_green">light green</string>
    <string name="folder_color_orange">orange</string>
    <string name="folder_color_pd">Color %d</string>
    <string name="folder_color_picker">Color picker</string>
    <string name="folder_color_yellow">yellow</string>
    <string name="folder_hint_text">Enter folder name</string>
    <string name="folder_microsoft_apps">Microsoft Apps</string>
    <string name="folder_multi_search_bar_hint">Search Apps</string>
    <string name="folder_name_format">%1$s folder</string>
    <string name="folder_opened">Folder opened</string>
    <string name="folder_social">Social</string>
    <string name="folder_tools">Tools</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="hide_apps_button">APPLY</string>
    <string name="home_screen">Home screen</string>
    <string name="home_screen_global_setting_title">Home screen</string>
    <string name="home_screen_layout">Home screen layout</string>
    <string name="home_screen_mode_apps">Home and Apps screens</string>
    <string name="home_screen_mode_change_alert_text">"Any customizations you've made to the Home screen will be discarded."</string>
    <string name="home_screen_mode_change_dialog_title">Apply selected Home screen layout?</string>
    <string name="home_screen_mode_change_with_copy_layout">The icon layout you are currently using for the Apps screen will be applied to the Home screen.</string>
    <string name="home_screen_mode_home_apps_body_text">A separate Apps screen will be available. Swipe up or down on the Home screen to show it. You can also put your most important apps on the Home screen for quick access.</string>
    <string name="home_screen_mode_home_only_body_text">All your apps will be shown on the Home screen.</string>
    <string name="home_screen_mode_only_home">Home screen only</string>
    <string name="home_screen_screengrid">Home screen grid</string>
    <string name="home_screen_settings_hide_apps">Hide apps</string>
    <string name="homes_screen_settings">Home screen settings</string>
    <string name="homesetting_easymode_close">Close</string>
    <string name="homesetting_easymode_summary">You can turn off Easy mode in Settings.</string>
    <string name="homesetting_easymode_title">Easy mode on</string>
    <string name="last_page">Current page is last page.</string>
    <string name="lock_or_unlock_dislog_msg">After moving this app out of the folder, keep the app locked or unlock it?</string>
    <string name="long_press_widget_to_add">Tap and hold a widget to move it.</string>
    <string name="max_characters_available">Up to %d characters available.</string>
    <string name="menu_edit_cancel">Cancel</string>
    <string name="menu_navigate_up">Navigate up</string>
    <string name="menu_uninstall">Uninstall app</string>
    <string name="move_to_home">Drag here to add to Home screen.</string>
    <string name="multi_select_apps_deselected">Apps deselected.</string>
    <string name="multi_select_create_folder">Create folder</string>
    <string name="multi_select_create_folder_all_folder_items_notice">"Can't create new folder. All items selected."</string>
    <string name="multi_select_create_folder_one_item_notice">Select at least %d items.</string>
    <string name="multi_select_create_folder_select_folder_notice">"Can't create new folder while a folder is selected."</string>
    <string name="multi_select_disable">Disable</string>
    <string name="multi_select_disable_app_notice_one">"Can't disable %s."</string>
    <string name="multi_select_disable_app_notice_other">"Can't disable %1$s and %2$d other apps."</string>
    <string name="multi_select_help_dialog_notice">Touch and hold selected items to move them.</string>
    <string name="multi_select_max_count_notice">"Can't select more than %d items."</string>
    <string name="multi_select_remove_shortcut_notice">Removed %1$s and %2$d others from home screen.</string>
    <string name="multi_select_uninstall">Uninstall</string>
    <string name="multi_select_uninstall_app_notice_one">"Can't uninstall %s."</string>
    <string name="notification_panel_setting_summary">Swipe down to open the notification panel from the Home screen.</string>
    <string name="notification_panel_setting_title">Quick-open notification panel</string>
    <string name="only_portrait_mode">Portrait mode only</string>
    <string name="only_portrait_mode_summary">Prevent the Home screen from rotating to Landscape mode.</string>
    <string name="option_menu_contact_up">Contact us</string>
    <string name="option_menu_galaxy_essentials">Galaxy Essentials</string>
    <string name="option_menu_home_screen_settings">Home screen settings</string>
    <string name="option_menu_home_settings">Settings</string>
    <string name="option_menu_sfinder_settings">Finder settings</string>
    <string name="options_menu_search_recommend">Search options</string>
    <string name="options_menu_sort">Sort</string>
    <string name="options_menu_tide_up_pages">Clean up pages</string>
    <string name="quick_option_remove_shortcut">Remove from Home</string>
    <string name="setting_apps_screen_grid">Apps screen grid</string>
    <string name="theme_button_text">Themes</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="widget_button_text">Widgets</string>
    <string name="options_menu_clear_search_history">Clear search history</string>
</resources>