<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.common.multiselect.MultiSelectPanel android:gravity="center|top" android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="@dimen/multi_select_panel_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/multi_select_panel_layout" android:background="@drawable/multi_select_panel_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/multi_select_panel_margin_top" android:layout_marginBottom="@dimen/multi_select_panel_margin_bottom" android:layout_marginStart="@dimen/multi_select_panel_margin_start" android:layout_marginEnd="@dimen/multi_select_panel_margin_end">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:id="@id/multi_select_uninstall_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:id="@id/multi_select_uninstall" android:text="@string/multi_select_disable" android:drawableTop="@drawable/homescreen_edit_selection_uninstall" style="@style/MultiselectPannelStyle" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:id="@id/multi_select_remove_shortcut_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:id="@id/multi_select_remove_shortcut" android:text="@string/quick_option_remove_shortcut" android:drawableTop="@drawable/homescreen_edit_selection_remove" style="@style/MultiselectPannelStyle" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:id="@id/multi_select_create_folder_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:id="@id/multi_select_create_folder" android:text="@string/multi_select_create_folder" android:drawableTop="@drawable/homescreen_edit_selection_create" style="@style/MultiselectPannelStyle" />
        </LinearLayout>
    </LinearLayout>
</com.android.launcher3.common.multiselect.MultiSelectPanel>