<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:id="@id/mode_apps" android:background="?android:listChoiceBackgroundIndicator" android:paddingLeft="@dimen/home_settings_mode_list_margin_left" android:paddingRight="@dimen/home_settings_mode_list_margin_left" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall">
            <RadioButton android:gravity="center_vertical" android:id="@id/mode_apps_radio" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:paddingTop="@dimen/list_item_top_padding" android:paddingBottom="@dimen/list_item_bottom_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_screen_mode_apps" android:paddingStart="@dimen/home_settings_mode_list_margin_left" android:paddingEnd="0.0dip" style="?android:attr/textAppearanceListItem" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/home_settings_mode_divider_margin_left">
            <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:id="@id/mode_home_only" android:background="?android:listChoiceBackgroundIndicator" android:paddingLeft="@dimen/home_settings_mode_list_margin_left" android:paddingRight="@dimen/home_settings_mode_list_margin_left" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall">
            <RadioButton android:gravity="center_vertical" android:id="@id/mode_home_only_radio" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:paddingTop="@dimen/list_item_top_padding" android:paddingBottom="@dimen/list_item_bottom_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_screen_mode_only_home" android:paddingStart="@dimen/home_settings_mode_list_margin_left" android:paddingEnd="0.0dip" style="?android:attr/textAppearanceListItem" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/home_settings_mode_divider_margin_left">
            <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        </LinearLayout>
        <ImageView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/mode_preview_image" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/body_text_top_padding" android:layout_marginBottom="@dimen/body_text_top_padding" android:src="@drawable/homesettings_img_preview_home_apps" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_marginStart="@dimen/body_text_side_padding" android:layout_marginEnd="@dimen/body_text_side_padding" />
        <TextView android:textColor="@color/home_mode_description_text_color" android:id="@id/mode_help_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/body_text_top_padding" android:text="@string/home_screen_mode_home_apps_body_text" android:layout_marginStart="@dimen/body_text_side_padding" android:layout_marginEnd="@dimen/body_text_side_padding" style="@style/body_text_style" />
    </LinearLayout>
</ScrollView>